--- a/Carekhun Application/sample/src/main/res/values/strings.xml
+++ b/Carekhun Application/sample/src/main/res/values/strings.xml
@@ -1,45 +1,11 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
 
-        <!-- AbocControl -->
+        <!-- Carekhun -->
         <string name="app_name">Carekhun</string>
-        <string name="none_paired">nonePaired</string>
-        <string name="connect">Connect...</string>
-        <string name="not_suport">not suport</string>
-        <string-array name="comandos" ><item>test</item></string-array>
 
-        <!-- Navigation -->
-        <string name="sign_in">Sign in</string>
-        <string name="inbox">Customer Service Inbox</string>
-        <string name="speechrecognition">Speech Recognition</string>
-        <string name="facedetection">Face Detection</string>
-        <string name="scanpaper">Scan Paper</string>
-        <string name="sent_mail">Sent Mail</string>
-        <string name="iot">Internet of Things</string>
-        <string name="fall_detection">Fall Detection</string>
-        <string name="chat_room">Chat Room</string>
-        <string name="categories">Categories</string>
-        <string name="settings">Settings E-Book</string>
-        <string name="add">Add</string>
-        <string name="search">Search</string>
-        <string name="important">Face Detection</string>
-        <string name="documents">Voice Recognition</string>
-        <string name="open_user_profile">Open user profile</string>
-        <string name="open_settings">Open settings</string>
-
-        <!-- Settings -->
-        <string name="action_settings">Settings</string>
-
-        <!-- Scan Document -->
-        <string name="hello_world">Hello world!</string>
-        <string name="scanning">Scanning</string>
-        <string name="done">Save</string>
-        <string name="scan">Next</string>
-        <string name="cantCrop">Cant crop the image, change the points</string>
-        <string name="ok">Ok</string>
+        <!-- Loading -->
         <string name="loading">Loading</string>
-        <string name="applying_filter">Applying filter</string>
-        <string name="low_memory">Low Memory</string>
-        <string name="low_memory_message">Your phone is low on memory, you may feel some lags while editing images.</string>
 
         <!-- Login -->
         <string name="action_logout">Logout</string>
@@ -101,22 +67,6 @@
 
         <!--******************************************** Skip *************************************************-->
         <string name="app_intro_skip">Skip</string>
-
-        <!--******************************************** CHAT ROOM ********************************************-->
-        <string name="action_leave">Leave</string>
-        <string name="action_send">Send</string>
-        <string name="prompt_message">Message</string>
-        <string name="error_connect">Failed to connect</string>
-
-        <!-- chatMessages -->
-        <string name="message_welcome">Welcome to Socket.IO Chat –</string>
-        <plurals name="message_participants">
-                <item quantity="one">there\'s %d participant</item>
-                <item quantity="other">there are %d participants</item>
-        </plurals>
-        <string name="message_user_joined">%s joined</string>
-        <string name="message_user_left">%s left</string>
-        <string name="user_action_typing">is typing</string>
 
         <!--******************************************* BLE Sensor ********************************************-->
         <string name="connect_status_index">Connect Status：</string>
