--- a/Carekhun Application/sample/src/main/res/values-es/strings.xml
+++ b/Carekhun Application/sample/src/main/res/values-es/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools"
+    tools:ignore="MissingTranslation">
 
     <string name="app_name">nDrawer</string>
     <string name="sign_in">Sign in</string>
